master

1.0.36
- Zixaphir
  Fix image expansion. ( lol, moot handling 3rd party developer relations: http://boards.4chan.org/q/res/385389 )

1.0.35
- Mayhem
  Fix quoting inside inlined backlinks.
- aeosynth
  Beep, beep, motherfucker
  Don't expand pdfs
- Zixaphir
  New linkifier that respects <wbr>s.
  Fixed Filter + Menu
  Fixed image expansion
  Fixed forward links and id colors

1.0.34
- Mayhem
  Fix quoting.

1.0.33
- Zixaphir
  Fix Chrome support (for real this time)

1.0.32
- Zixaphir
  Fix Chrome support

1.0.31
- Zixaphir
  Added an option to prepend / append navigation delimiters
- Mayhem
  Fix successful posting causing errors.
  Fix 4chan X trying to interact with >>>/board/rules links.

1.0.30
- Zixaphir
  Fixed deadlink redirection

1.0.29
- Zixaphir
  Bugfix release
  - Icon Overlapping fixed
  - No themes being applied should be fixed
  - /pol/ is now correctly detected as a NSFW board

1.0.28
- Zixaphir
  Added Per-Board Personas.
  Fappe Tyme.
  Theme Editor slider now properly reflects current hue.
  QR has a default position in 'float' mode now.
  Added an option to make the updater moveable.
  Cached embed titles are now pruned after seven days.
  Fix Linkifier and <wbr>. Linkifier should now handle multi-lined links, I think.
- noface
  Added new feature 'Remove Spoilers'.
  Added input to specify height and width of embeds.
  Fixed Anonymize not working on stubs.
  Fixed deadquotes showing up in code-tags.
- Mayhem
  Fix posting warning not displaying the reason.
  Fix selection quoting on Opera.
  Fix history bug with Persistent QR enabled on Chrome.
  

1.0.27
- Zixaphir
  Fixed a bug involving malformed quotes generating an error. MOOOOOOOOT!!

1.0.26
- Zixaphir
  Fixed a prototyping bug resulting in an error with Embedding.

1.0.25
- Zixaphir
  Fixed a bug in the Archive Redirector that was causing an error popup (but was otherwise behaving correctly)
  Added a crunchbang emoji
  Added error-checking for the embedder title link

1.0.24