@@ -1,4 +1,6 @@
 master
+- Zixaphir
+  Fix youtube embedding.
 
 1.0.36
 - Zixaphir
